refactor: code for rum insights

--- a/tools/rum/explorer.html
+++ b/tools/rum/explorer.html
@@ -102,7 +102,7 @@
               </div>
               <div class="filter-tags"></div>
               <figcaption>
-                <span class="lab">Looking for a particular feature? Try our&nbsp;<a href="../oversight/explorer.html" target=”_blank”>labs</a>.</span>
+                <span class="lab">Looking for a particular feature? Try our&nbsp;<a href="../oversight/explorer.html" target="_blank">labs</a>.</span>
                 <span aria-hidden="true" id="low-data-warning"><span class="danger-icon"></span> small sample size, accuracy
                   reduced.</span>
                 <span id="timezone"></span>
