feat: adding form checkpoints in the dashboard

--- a/tools/oversight/explorer.html
+++ b/tools/oversight/explorer.html
@@ -201,6 +201,10 @@
               <dd>Experiment</dd>
               <dt>a11y</dt>
               <dd>Accessibility</dd>
+              <dt>formsubmit</dt>
+              <dd>Form Submission</dd>
+              <dt>fill</dt>
+              <dd>Form Fill</dd>
             </dl>
           </list-facet>
           <literal-facet facet="click.source" drilldown="list.html">
@@ -410,6 +414,15 @@
           </list-facet>
           <list-facet facet="utm.target">
             <legend>UTM Target</legend>
+          </list-facet>
+          <list-facet facet="formsubmit.source">
+            <legend>Form Submit Source (CSS Selector)</legend>
+          </list-facet>
+          <list-facet facet="formsubmit.target">
+            <legend>Form Submit Target</legend>
+          </list-facet>
+          <list-facet facet="fill.source">
+            <legend>Form Field Source (CSS Selector)</legend>
           </list-facet>
         </facet-sidebar>
       </div>
