feat: adding title and link to help for form facets

--- a/tools/oversight/explorer.html
+++ b/tools/oversight/explorer.html
@@ -260,7 +260,7 @@
 
           <list-facet facet="consent.source">
             <legend>Consent Provider</legend>
-            <a href="docs/optel-explorer#facet-consent" class="help" target="_blank" 
+            <a href="docs/optel-explorer#facet-consent" class="help" target="_blank"
               title="Which consent provider is enabled on the site?"></a>
             <dl>
               <dt>onetrust</dt>
@@ -275,7 +275,7 @@
           </list-facet>
           <list-facet facet="consent.target">
             <legend>Consent Dialog</legend>
-            <a href="docs/optel-explorer#facet-consent" class="help" target="_blank" 
+            <a href="docs/optel-explorer#facet-consent" class="help" target="_blank"
               title="How does the user interact with the consent window/modal on the site?"></a>
             <dl>
               <dt>show</dt>
@@ -445,20 +445,25 @@
             <legend>UTM Source</legend>
             <a href="/docs/optel-explorer#facet-utm" class="help" target="_blank"
               title="Where the user came from before landing on the site?"></a>
-            
           </list-facet>
           <list-facet facet="utm.target">
             <legend>UTM Target</legend>
             <a href="/docs/optel-explorer#facet-utm" class="help" target="_blank"
               title="categorization of the UTM sources driving traffic to the site"></a>
           </list-facet>
-          <list-facet facet="formsubmit.source">
+          <list-facet facet="formsubmit.source"
+              href="/docs/optel-explorer#facet-formsubmit" class="help" target="_blank"
+              title="The CSS Selector of the form that is submitted">
             <legend>Form Submit Source (CSS Selector)</legend>
           </list-facet>
-          <list-facet facet="formsubmit.target">
+          <list-facet facet="formsubmit.target"
+              href="/docs/optel-explorer#facet-formsubmit" class="help" target="_blank"
+              title="The action property of the form where it is submitted to">
             <legend>Form Submit Target</legend>
           </list-facet>
-          <list-facet facet="fill.source">
+          <list-facet facet="fill.source"
+              href="/docs/optel-explorer#facet-fill" class="help" target="_blank"
+              title="The CSS Selector of the form field that is filled">
             <legend>Form Field Source (CSS Selector)</legend>
           </list-facet>
         </facet-sidebar>
