updating the title in accordance with the other facets

--- a/tools/oversight/explorer.html
+++ b/tools/oversight/explorer.html
@@ -453,17 +453,17 @@
           </list-facet>
           <list-facet facet="formsubmit.source"
               href="/docs/optel-explorer#facet-formsubmit" class="help" target="_blank"
-              title="The CSS Selector of the form that is submitted">
+              title="Which forms the user submitted">
             <legend>Form Submit Source (CSS Selector)</legend>
           </list-facet>
           <list-facet facet="formsubmit.target"
               href="/docs/optel-explorer#facet-formsubmit" class="help" target="_blank"
-              title="The action property of the form where it is submitted to">
+              title="The endpoints where the user submitted the form">
             <legend>Form Submit Target</legend>
           </list-facet>
           <list-facet facet="fill.source"
               href="/docs/optel-explorer#facet-fill" class="help" target="_blank"
-              title="The CSS Selector of the form field that is filled">
+              title="The fields of the form that the user filled">
             <legend>Form Field Source (CSS Selector)</legend>
           </list-facet>
         </facet-sidebar>
