using histogram facet for showing form submit time

--- a/tools/oversight/explorer.html
+++ b/tools/oversight/explorer.html
@@ -260,7 +260,7 @@
 
           <list-facet facet="consent.source">
             <legend>Consent Provider</legend>
-            <a href="docs/optel-explorer#facet-consent" class="help" target="_blank" 
+            <a href="docs/optel-explorer#facet-consent" class="help" target="_blank"
               title="Which consent provider is enabled on the site?"></a>
             <dl>
               <dt>onetrust</dt>
@@ -275,7 +275,7 @@
           </list-facet>
           <list-facet facet="consent.target">
             <legend>Consent Dialog</legend>
-            <a href="docs/optel-explorer#facet-consent" class="help" target="_blank" 
+            <a href="docs/optel-explorer#facet-consent" class="help" target="_blank"
               title="How does the user interact with the consent window/modal on the site?"></a>
             <dl>
               <dt>show</dt>
@@ -445,7 +445,7 @@
             <legend>UTM Source</legend>
             <a href="/docs/optel-explorer#facet-utm" class="help" target="_blank"
               title="Where the user came from before landing on the site?"></a>
-            
+
           </list-facet>
           <list-facet facet="utm.target">
             <legend>UTM Target</legend>
@@ -457,6 +457,12 @@
           </list-facet>
           <list-facet facet="formsubmit.target">
             <legend>Form Submit Target</legend>
+          </list-facet>
+          <list-facet facet="formsubmit.target">
+            <legend>Form Submit Target</legend>
+          </list-facet>
+          <list-facet facet="formsubmit.histogram">
+            <legend>Form Submit Time (s)</legend>
           </list-facet>
           <list-facet facet="fill.source">
             <legend>Form Field Source (CSS Selector)</legend>
