making time to submit facet histogram facet

--- a/tools/oversight/explorer.html
+++ b/tools/oversight/explorer.html
@@ -461,7 +461,7 @@
             <a href="/docs/optel-explorer#facet-formsubmit" class="help" target="_blank"
               title="The endpoints where the user submitted the form"></a>
           </list-facet>
-          <list-facet facet="formsubmit.histogram">
+          <list-facet facet="formsubmit.histogram" sort="asc">
             <legend>Form Submit Time (s)</legend>
             <a  href="/docs/optel-explorer#facet-formsubmit" class="help" target="_blank"
               title="How much time did the user take to submit the form"></a>
