update title of the time to submit facet

--- a/tools/oversight/explorer.html
+++ b/tools/oversight/explorer.html
@@ -462,7 +462,7 @@
               title="The endpoints where the user submitted the form"></a>
           </list-facet>
           <list-facet facet="formsubmit.histogram" sort="asc">
-            <legend>Form Submit Time (s)</legend>
+            <legend>Form Submit Time (mm:ss)</legend>
             <a  href="/docs/optel-explorer#facet-formsubmit" class="help" target="_blank"
               title="How much time did the user take to submit the form"></a>
           </list-facet>
