--- a/404.html
+++ b/404.html
@@ -45,6 +45,7 @@
       align-items: center;
       justify-content: center;
       text-align: center;
+      flex-direction: column;
     }
 
     main.error .error-number {
@@ -53,6 +54,51 @@
 
     main.error .error-number text {
       font-family: monospace;
+    }
+
+    .search-container {
+      margin: 20px 0;
+    }
+
+    .search-container input {
+      width: 300px;
+      padding: 10px;
+      border: 1px solid #ccc;
+      border-radius: 5px;
+    }
+
+    .suggestions {
+      margin-top: 20px;
+    }
+
+    .suggestions ul {
+      list-style: none;
+      padding: 0;
+    }
+
+    .suggestions li {
+      margin-bottom: 10px;
+    }
+
+    .suggestions a {
+      text-decoration: none;
+      color: var(--link-color);
+    }
+
+    .suggestions a:hover {
+      text-decoration: underline;
+    }
+
+    @media (prefers-color-scheme: dark) {
+      .search-container input {
+        background-color: #333;
+        color: #fff;
+        border-color: #555;
+      }
+
+      .suggestions a {
+        color: var(--link-color-dark);
+      }
     }
   </style>
   <link rel="stylesheet" href="/styles/lazy-styles.css">
@@ -66,6 +112,20 @@
         <text x="0" y="17">404</text>
       </svg>
       <h2 class="error-message">Page Not Found</h2>
+      <div class="search-container">
+        <form action="/search" method="get">
+          <input type="search" name="q" placeholder="Search..." autofocus>
+        </form>
+      </div>
+      <div class="suggestions">
+        <h3>Here are some popular pages that might help:</h3>
+        <ul>
+          <li><a href="/">Home</a></li>
+          <li><a href="/docs">Documentation</a></li>
+          <li><a href="/blog">Blog</a></li>
+          <li><a href="/community">Community</a></li>
+        </ul>
+      </div>
       <p class="button-container">
         <a href="/" class="button secondary error-button-home">Go home</a>
       </p>
