feat: track external redirect estimates

--- a/tools/oversight/explorer.html
+++ b/tools/oversight/explorer.html
@@ -414,6 +414,11 @@
             <a href="/docs/optel-explorer#facet-redirect" class="help" target="_blank"
               title="Number of hops it took to reach the final destination page"></a>
           </list-facet>
+          <list-facet facet="redirect.type">
+            <legend>Redirect Type</legend>
+            <a href="/docs/optel-explorer#facet-redirect" class="help" target="_blank"
+              title="Internal redirects vs external redirects"></a>
+          </list-facet>
 
           <list-facet facet="experiment.source">
             <legend>Experiment ID</legend>
